// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`accepts textStyle prop 1`] = `
<View
  accessibilityComponentType={undefined}
  accessibilityLabel={undefined}
  accessibilityTraits={undefined}
  accessible={true}
  collapsable={undefined}
  hitSlop={undefined}
  nativeID={undefined}
  onLayout={undefined}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "rgba(51, 51, 51, 1)",
      "borderColor": "rgba(248, 248, 248, 1)",
      "borderWidth": 1,
      "height": 36,
      "justifyContent": "center",
    }
  }
  testID={undefined}
>
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
    style={
      Array [
        Object {
          "fontSize": 12,
        },
        Object {
          "color": "rgba(204, 204, 204, 1)",
          "fontFamily": "AGaramondPro-Regular",
          "fontSize": 20,
          "opacity": 1,
        },
        Object {
          "fontFamily": "AvantGardeGothicITC",
        },
      ]
    }
  >
    I AM AN INVERTED BUTTON
  </Text>
</View>
`;

exports[`renders properly 1`] = `
<View
  accessibilityComponentType={undefined}
  accessibilityLabel={undefined}
  accessibilityTraits={undefined}
  accessible={true}
  collapsable={undefined}
  hitSlop={undefined}
  nativeID={undefined}
  onLayout={undefined}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "rgba(51, 51, 51, 1)",
      "borderColor": "rgba(248, 248, 248, 1)",
      "borderWidth": 1,
      "height": 36,
      "justifyContent": "center",
    }
  }
  testID={undefined}
>
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
    style={
      Array [
        Object {
          "fontSize": 12,
        },
        Object {
          "color": "rgba(204, 204, 204, 1)",
          "fontFamily": "AGaramondPro-Regular",
          "opacity": 1,
        },
        Object {
          "fontFamily": "AvantGardeGothicITC",
        },
      ]
    }
  >
    I AM AN INVERTED BUTTON
  </Text>
</View>
`;
